src/test/ui/reachable/unreachable-variant.stderr
error[E0603]: module `super_sekrit` is private
  --> $DIR/unreachable-variant.rs:6:21
   |
LL |     let _x = other::super_sekrit::sooper_sekrit::baz;
   |                     ^^^^^^^^^^^^ this module is private
   |
note: the module `super_sekrit` is defined here
  --> $DIR/auxiliary/unreachable_variant.rs:1:1
   |
LL | mod super_sekrit {
   | ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
